# tdd-unity-fff-template

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile.dev  devcontainer.json
cmake/: static-analysis.cmake
include/: my_module.h
scripts/: build.sh  run_app.sh  run_tests.sh
src/: main.c  my_module.c
tests/: CMakeLists.txt  test_my_module.c
